Added support to future validation and error-handling implementations.

--- a/ticket-purchase.html
+++ b/ticket-purchase.html
@@ -126,7 +126,7 @@
           <span>VENTA</span>
           <h2 id="ticket-price">VALOR DE TICKET</h2>
         </div>
-        <form id="form-container" action="/" method="post">
+        <form id="form-container" action="/" method="post" novalidate>
           <div id="form-personal-input" class="gap-2">
             <label for="name">
               <input
@@ -138,6 +138,11 @@
                 max="50"
                 required
               />
+              <div>
+                <span class="error-message" style="color: red">
+                  * Numbers and special characters are not allowed.
+                </span>
+              </div>
             </label>
             <label for="lastname">
               <input
@@ -149,6 +154,11 @@
                 max="50"
                 required
               />
+              <div>
+                <span class="error-message" style="color: red">
+                  * Numbers and special characters are not allowed.
+                </span>
+              </div>
             </label>
           </div>
           <label for="email">
@@ -161,19 +171,30 @@
               max="100"
               required
             />
+            <div>
+              <span class="error-message" style="color: red">
+                * Invalid email format.
+              </span>
+            </div>
           </label>
           <div class="d-flex gap-2 mt-3">
-            <label for="amount" class="w-50">
+            <!-- <div id="form-ticket-input"> -->
+            <label for="quantity" class="w-50">
               Cantidad
               <input
                 type="number"
                 class="form-control mt-2"
-                id="amount"
-                name="amount"
+                id="quantity"
+                name="quantity"
                 placeholder="Cantidad"
                 min="0"
                 max="10"
               />
+              <div>
+                <span class="error-message" style="color: red">
+                  * Select quantity (min: 1 - max: 10)
+                </span>
+              </div>
             </label>
             <label for="category" class="w-50">
               Categoría
@@ -189,8 +210,18 @@
             </label>
           </div>
           <div id="purchase-resume">
-            <p>Total a pagar: $</p>
-            <p id="total"></p>
+            <div>
+              <p>Nombre Completo:</p>
+              <p id="fullname-display" class="fw-bold">Juan Pablo Bernard</p>
+            </div>
+            <div>
+              <p>Email:</p>
+              <p id="email-display" class="fw-bold">jean@email.com</p>
+            </div>
+            <div>
+              <p>Total a pagar: $</p>
+              <p id="total-display" class="fw-bold">500.00</p>
+            </div>
           </div>
           <div id="submit-btn-container">
             <button id="reset-btn" class="btn-submit">Borrar</button>
