Fixed anchor's routes pathing.

--- a/ticket-purchase.html
+++ b/ticket-purchase.html
@@ -32,19 +32,21 @@
         <span>Conf Bs As</span>
       </div>
       <nav id="header-navbar">
-        <a class="header-links" href="/index.html#main-header"
+        <a class="header-links" href="./index.html#main-header"
           >La conferencia</a
         >
-        <a class="header-links" href="/index.html#cards-section"
+        <a class="header-links" href="./index.html#cards-section"
           >Los oradores</a
         >
-        <a class="header-links" href="/index.html#destinos-section"
+        <a class="header-links" href="./index.html#destinos-section"
           >El lugar y la fecha</a
         >
-        <a class="header-links" href="/index.html#form-section"
+        <a class="header-links" href="./index.html#form-section"
           >Conviértete en orador</a
         >
-        <a class="header-links" href="/ticket-purchase.html">Comprar tickets</a>
+        <a class="header-links" href="./ticket-purchase.html"
+          >Comprar tickets</a
+        >
       </nav>
 
       <div id="header-dropdown" class="dropdown">
@@ -75,21 +77,25 @@
           </svg>
         </button>
         <ul id="dropdown-navbar" class="dropdown-menu">
-          <a class="dropdown-item header-links" href="#hero-section"
+          <a class="dropdown-item header-links" href="./index.html#hero-section"
             >La conferencia</a
           >
-          <a class="dropdown-item header-links" href="#cards-section"
+          <a
+            class="dropdown-item header-links"
+            href="./index.html#cards-section"
             >Los oradores</a
           >
-          <a class="dropdown-item header-links" href="#destinos-section"
+          <a
+            class="dropdown-item header-links"
+            href="./index.html#destinos-section"
             >El lugar y la fecha</a
           >
-          <a class="dropdown-item header-links" href="#form-section"
+          <a class="dropdown-item header-links" href="./index.html#form-section"
             >Conviértete en orador</a
           >
           <a
             class="dropdown-item header-links"
-            href="https://www.ticketek.com.ar/especiales"
+            href="./ticket-purchase.html"
             target="_blank"
             >Comprar tickets</a
           >
@@ -179,7 +185,6 @@
             </div>
           </label>
           <div class="d-flex gap-2 mt-3">
-            <!-- <div id="form-ticket-input"> -->
             <label for="quantity" class="w-50">
               Cantidad
               <input
