--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a class="header-links" href="#cards-section">Los oradores</a>
         <a class="header-links" href="#destinos-section">El lugar y la fecha</a>
         <a class="header-links" href="#form-section">Conviértete en orador</a>
-        <a class="header-links" href="/ticket-purchase.html" target="_blank"
+        <a class="header-links" href="ticket-purchase.html" target="_blank"
           >Comprar tickets</a
         >
       </nav>
@@ -90,7 +90,7 @@
           >
           <a
             class="dropdown-item header-links"
-            href="/ticket-purchase.html"
+            href="ticket-purchase.html"
             target="_blank"
             >Comprar tickets</a
           >
@@ -113,7 +113,7 @@
             <a class="anchor-btn" href="#form-section">Quiero ser orador</a>
             <a
               class="anchor-btn btn-green"
-              href="/ticket-purchase.html"
+              href="ticket-purchase.html"
               target="_blank"
               >Comprar tickets</a
             >
